fix: Status bar color on iOS

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body {
   margin: 0;
   height: 100%;
   overflow: hidden;
+  background: #2a56c6;
 }
 
 html,
@@ -44,6 +45,7 @@ a {
   flex-direction: column;
   height: 100%;
   transition: transform 0.3s ease-out;
+  background: white;
 }
 
 .app--menu-visible {
